--- a/index.html
+++ b/index.html
@@ -1,1 +1,116 @@
-Hello World
+<!DOCTYPE html>
+<!--[if lte IE 9]-->
+<html lang="en" class="oldie">
+<![endif]-->
+<!--[if gt IE 9]-->
+<html lang="en">
+<!--<![endif]-->
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie-edge">
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+  <!--Custom CSS-->
+  <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+
+<body>
+   
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Alicja Texler</a>
+      <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto pull-sm-right">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Portfolio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+    <section id="cover">
+              <div id="cover-caption">
+                <div class="container">
+                    <div class="col-sm-12 offset-sm-1">
+                        <h1 class="display-4">Alicja Texler Portfolio page</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia in molestiae, ducimus eum excepturi quas voluptate cupiditate, blanditiis doloremque, earum totam. Consequuntur perferendis ullam voluptatibus porro! Autem neque illum at!</p>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <section id="portfolio">
+        <div class="section-content">
+            <div class="container">
+                <h2>Portfolio</h2>
+                <div class="row">
+                    <div class="column-sm-12">
+                        <div class="card-group">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h4 class="card-title"> Game </h4>
+                                </div>
+                                <img src="images/islandgame.jpg" alt="game">
+                                <div class="card-body">
+                                    <p>Open-world game developed in Unity</p>
+                                    <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#myModal">Learn more</button>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-header">
+                                    <h4 class="card-title"> Web App </h4>
+                                </div>
+                                <img src="images/prodigy.png" alt="prodigy">
+                                <div class="card-body">
+                                    <p>Online store demo developed in Ruby on Rails</p>
+                                    <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#myModal">Learn more</button>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="card-header">
+                                    <h4 class="card-title"> Place Holder </h4>
+                                </div>
+                                <img src="images/graph.gif" alt="graph">
+                                <div class="card-body">
+                                    <p>Web app in Python presenting graphs algorithms</p>
+                                    <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#myModal">Learn more</button>
+                                </div>
+                            </div>
+                        </div><!-- card group div-->
+                    </div>
+                </div> <!-- row div -->
+            </div> <!-- container div-->
+        </div>
+    </section>
+  <section id="about">
+      <div class="section-content">
+          <div class="container">
+              <div class="col-md-6">
+                  <div class="about-text">
+                      <h3>About Me</h3>
+                      <p class="lead"> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat nam, excepturi sint magnam, corrupti hic ipsum doloremque numquam maiores quia voluptatibus quo cumque. Enim libero pariatur velit, tenetur voluptatem facere!</p>
+                      <h5>Follow me on the web</h5>
+                      <a href="" class="btn btn-sm btn-outline-info">GitHub</a>
+                      <a href="" class="btn btn-sm btn-outline-info">Facebook</a>
+                      <a href="" class="btn btn-sm btn-outline-info">LinkedIn</a>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+  
+
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>`
+</body>
