--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Skills</a>
@@ -39,7 +39,7 @@
             <a class="nav-link" href="#">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
         </ul>
     </div>
@@ -58,8 +58,8 @@
     <section id="projects">
         <div class="section-content">
             <div class="container">
-                <h2>Projects</h2>
-                <div class="card-deck">
+                <h2>Selected Projects</h2>
+                <div>
                     <div class="card border-info mb-3">
                         <div class="card-header">
                             <h4 class="card-title"> Game Prototype </h4>
@@ -68,9 +68,9 @@
                         <div class="card-body">
                             <p>Open-world game developed in Unity</p>
                         </div>
-                        <div class="card-footer">
-                            <button type="button" class="card btn btn-outline-info" data-toggle="modal" data-target="#myModal">Learn more</button>
-                        </div>
+                        <a href="http://www.google.com"><div class="card-footer">
+                            <p>Learn More</p>
+                            </div></a>
                     </div>
                     <div class="card border-info mb-3">
                         <div class="card-header">
@@ -94,9 +94,9 @@
                     </div>
                     <div class="card border-info mb-3">
                         <div class="card-header">
-                            <h4 class="card-title"> C++ with SDL2 </h4>
+                            <h4 class="card-title"> 9 Men Morris Board Game C++ with SDL2 </h4>
                         </div>
-                        <img src="images/placeholder.png" alt="graph">
+                        <img src="images/game_capture.png" alt="game">
                         <div class="card-body">
                             <p>9'mens Morris game</p>
                             <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#myModal">Learn more</button>
@@ -122,7 +122,7 @@
               <div class="col-md-6">
                   <div class="about-text">
                       <h3>About Me</h3>
-                      <p class="lead"> I'm working on my Masters Degree in Computer Science at Brooklyn College. My main interest include machine learning and game development.</p>
+                      <p class="lead"> I'm working on my Masters Degree in Computer Science at Brooklyn College. My main interests include Machine Learning and Game Development.</p>
                       <a href="" class="btn btn-sm btn-outline-info">GitHub</a>
                       <a href="" class="btn btn-sm btn-outline-info">Facebook</a>
                       <a href="" class="btn btn-sm btn-outline-info">LinkedIn</a>
