added new pictures and new about me

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="col-sm-12">
                         <h1>ALICJA TEXLER</h1>
                         <hr>
-                        <h2>Software Developer</h2>
+                        <h2>Software Engineer</h2>
                     </div>
                 </div>
             </div>
@@ -60,7 +60,38 @@
             <div class="container">
                 <h2>Selected Projects</h2>
                 <div>
+                   
                     <div class="card border-info mb-3">
+                        <div class="card-header">
+                            <h4 class="card-title">Stock Portfolio App</h4>
+                        </div>
+                        <img src="images/portfolio_app.png" alt="porfolio_app">
+                        <div class="card-body">
+                            <p>Portfolio app in NodeJS/Express with MongoDB</p>
+                            <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#myModal">Learn more</button>
+                        </div>
+                    </div>
+                    <div class="card border-info mb-3">
+                        <div class="card-header">
+                            <h4 class="card-title"> Python Web App </h4>
+                        </div>
+                        <img src="images/havel-hakimi.PNG" alt="graph">
+                        <div class="card-body">
+                            <p>Presentation of graph constructing algorithms</p>
+                            <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#myModal">Learn more</button>
+                        </div>
+                    </div>
+                    <div class="card border-info mb-3">
+                        <div class="card-header">
+                            <h4 class="card-title"> 9 Men Morris Board Game C++ with SDL2 </h4>
+                        </div>
+                        <img src="images/game_capture.jpg" alt="game">
+                        <div class="card-body">
+                            <p>9'mens Morris game</p>
+                            <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#myModal">Learn more</button>
+                        </div>
+                    </div>
+                     <div class="card border-info mb-3">
                         <div class="card-header">
                             <h4 class="card-title"> Game Prototype </h4>
                         </div>
@@ -72,46 +103,6 @@
                             <p>Learn More</p>
                             </div></a>
                     </div>
-                    <div class="card border-info mb-3">
-                        <div class="card-header">
-                            <h4 class="card-title">Store Web App </h4>
-                        </div>
-                        <img src="images/prodigy.png" alt="prodigy">
-                        <div class="card-body">
-                            <p>Online store demo developed in Ruby on Rails</p>
-                            <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#myModal">Learn more</button>
-                        </div>
-                    </div>
-                    <div class="card border-info mb-3">
-                        <div class="card-header">
-                            <h4 class="card-title"> Python Web App </h4>
-                        </div>
-                        <img src="images/graph.gif" alt="graph">
-                        <div class="card-body">
-                            <p>Presentation of graph constructing algorithms</p>
-                            <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#myModal">Learn more</button>
-                        </div>
-                    </div>
-                    <div class="card border-info mb-3">
-                        <div class="card-header">
-                            <h4 class="card-title"> 9 Men Morris Board Game C++ with SDL2 </h4>
-                        </div>
-                        <img src="images/game_capture.png" alt="game">
-                        <div class="card-body">
-                            <p>9'mens Morris game</p>
-                            <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#myModal">Learn more</button>
-                        </div>
-                    </div>
-                    <div class="card border-info mb-3">
-                        <div class="card-header">
-                            <h4 class="card-title"> Placeholder </h4>
-                        </div>
-                        <img src="images/placeholder.png" alt="graph">
-                        <div class="card-body">
-                            <p>Something developed in something</p>
-                            <button type="button" class="btn btn-outline-info" data-toggle="modal" data-target="#myModal">Learn more</button>
-                        </div>
-                    </div>
                 </div><!-- card group div-->
             </div> <!-- container div-->
         </div>
@@ -122,9 +113,9 @@
               <div class="col-md-6">
                   <div class="about-text">
                       <h3>About Me</h3>
-                      <p class="lead"> I'm working on my Masters Degree in Computer Science at Brooklyn College. My main interests include Machine Learning and Game Development.</p>
+                      <p class="lead"> I am a Software Engineer working primarily in C/C++. My personal passion is developing video games and learning about software development.
+                      There is so much to learn, it never ends...</p>
                       <a href="" class="btn btn-sm btn-outline-info">GitHub</a>
-                      <a href="" class="btn btn-sm btn-outline-info">Facebook</a>
                       <a href="" class="btn btn-sm btn-outline-info">LinkedIn</a>
                   </div>
                   
