--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <a class="navbar-brand" href="#">Alicja Texler</a>
         <button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -114,6 +114,7 @@
         </div>
     </section>
     <section id="skills">
+        <div class="section-content">
         <div class="container">
             <div class="column">
                 <h3>Programming/Scripting</h3>
@@ -209,28 +210,31 @@
             </div>
 
         </div>
+        </div>
     </section>
     <br>
     <br>
     <section id="hobbies">
+        <div class="section-content">
         <div class="container">
             <h2>My new hobby is 3D modeling.</h2>
             <div class="row">
                 
-                <div class="card hobby">
+                <div class="hobby card">
                     <img src="images/donut.png" alt="a donut">
                     <p class="card-text">My first donut with sprinkles.</p>
                 </div>
-                <div class="card hobby">
+                <div class="hobby card">
                     <img src="images/coffee.png" alt="A cup of coffee">
                     <p class="card-text">A cup of coffee.</p>
                 </div>
-                <div class="card hobby">
+                <div class="hobby card">
                     <img src="images/0030.png" alt="donut and coffee">
                     <p class="card-text">Now both together on a table</p>
                 </div>
             </div>
 
+        </div>
         </div>
     </section>
   <section id="about">
